--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Undergraduate Student at Cal Poly San Luis Obispo
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # To use the Cal Poly Learn by Doing logo put https://raw.githubusercontent.com/[username]/[website_name]/master/images/CP_LBD.jpg
 # But fill in your actual username and website name
-avatar: [url=https://cdnlogo.com/logo/cal-poly-mustangs_32800.html][img]https://cdn.cdnlogo.com/logos/c/91/cal-poly-mustangs.svg[/img][/url]
+avatar: [url=https://raw.githubusercontent.com/[kdismukerodriguez]/[kdismukerodriguez.github.io]/master/images/CP_LBD.jpg
 
 #
 # Flags below are optional
